                for threshold estimation.
(6) Changed:    Improved volume render function in cat_surf_render.                
(7) Added:      Added FreeSurfer annot-export function.


------------------------------------------------------------------------
r976 | dahnke | 2016-08-01 18:14:59 +0200 (Mo, 01 Aug 2016) | 7 lines

Changed paths:
M       CHANGES.txt
M       cat_surf_render.m
M       cat_surf_render2.m

(1) Changed:    Corrected error in old cat_surf_render function.

------------------------------------------------------------------------
r977 | gaser | 2016-08-01 19:14:38 +0200 (Mo, 01 Aug 2016) | 7 lines

Changed paths:
M       CHANGES.txt
M       cat_vol_groupwise_ls.m

Fixed: Realigned images using cat_vol_groupwise_ls.m have now correct (flipped)
x-voxel size (thanks to Paul Schmidt for pointing to that issue).

------------------------------------------------------------------------
r978 | gaser | 2016-08-08 11:32:11 +0200 (Mo, 08 Aug 2016) | 11 lines

Changed paths:
M       CAT12-Manual.doc
M       CAT12-Manual.pdf
M       CHANGES.txt
M       cat_conf_opts.m
M       cat_conf_stools.m
M       html/images/non_orthogonal.png

(1) Changed: Moved some options to expert mode
(2) Fixed: Non-orthogonality image is now fixed in manual and help.

------------------------------------------------------------------------

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat_long_main.m
M       cat_surf_resamp.m
M       html/cat.html
M       templates_1.50mm/hammers.csv
M       templates_1.50mm/labels_dartel_hammers.xml
M       templates_1.50mm/labels_dartel_mori.xml
M       templates_1.50mm/labels_dartel_neuromorphometrics.xml
M       templates_1.50mm/mori.csv
M       templates_1.50mm/neuromorphometrics.csv

(1) Changed: Resampled surfaces have less artefacts due to resampling.
(2) Fixed: Corrected some anatomical names in atlases.
------------------------------------------------------------------------
r979 | gaser | 2016-08-08 16:21:03